2015-01-25 Neel Chauhan <neel@neelc.org>
 * New Version (0.2)
 * New Feature: '-T' option to run for a specified number of ticks
 * New Feature: '-n' option to display each tick on a new line

2015-01-09 Neel Chauhan <neel@neelc.org>
 * Initial Version (0.01)