@@ -8,6 +8,7 @@ currtime is an enhanced command-line operated real time clock.
  * Shows the current time on the same line
  * Can run for a specified number of ticks (seconds) with the -T (ticks) flag
  * Option to display each tick on a new line with the -n flag
+ * Ability to display a tick number preceding a tick with the -t flag
 
 == GETTING STARTED ==
 
